--- a/src/css/style.css
+++ b/src/css/style.css
@@ -582,12 +582,12 @@ video {
   right: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
 .z-50 {
   z-index: 50;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .mx-auto {
@@ -679,10 +679,6 @@ video {
   flex-basis: 100%;
 }
 
-.origin-top-right {
-  transform-origin: top right;
-}
-
 .translate-y-4 {
   --tw-translate-y: 1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -750,12 +746,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0px * var(--tw-space-x-reverse));
   margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.divide-y > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
@@ -1879,8 +1869,8 @@ Header .Barra .Logo h3 .microfono::after {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-  --tw-bg-opacity: 0.7;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.5;
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
@@ -1916,11 +1906,6 @@ Header .Barra .Logo h3 .microfono::after {
 }
 
 /* Playlist */
-
-.playlist {
-  position: relative;
-  flex-grow: 1;
-}
 
 .page {
   position: absolute;
